Init - Make a reader excel, working but has to validate

--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,5 @@
-MY_USERNAME = "jhonny.souza@fgmdentalgroup.com"
-MY_PASSWORD = "Spyke2024!"    
+MY_USERNAME = ""
+MY_PASSWORD = ""
 MY_CLIENT_ID = "60390fd9-539d-4b94-b595-6b7d5ab57f48"
 MY_CLIENT_SECRET = "nxj8Q~l5Ym799LxBI0xIzpJ3LF4oY8mQRuXV4a7q"
 MY_TENANT_ID = "e220d369-e6a8-4126-83ef-b4b6bbfd9367"
